fix grid not showing

--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@ input[type='range']::-webkit-slider-thumb {
 
 .grid-element {
     user-select:none;
+    border: 1px solid var(--primary-dark);
 }
 
 /* footer style */
